# artha-os-local

./: .gitignore  AGENTS.md  README.md  onboard.md  pyproject.toml  services.yaml  to-do.md
cli/: __main__.py  camera.py  common.py  down.py  logs.py  nats_cmd.py  peek.py  provenance.py  restart.py  status.py  sync_cmd.py  up.py
config/: nats.conf
core/: config.py  shm.py  supervision.py  types.py
docs/: onboarding-steps.md
docs/cloud-apis/: cloud-api.md
docs/concepts/: bridge.md  cameras.md  cloud.md  ipc.md  local-tool.md  supervisor.md  sync.md
docs/operations/: README.md  add-robot.md  add-service.md  modify-frontend.md
docs/reference/: store-api.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
local_tool/: __init__.py  io.py  models.py  pyproject.toml
local_tool/server/: app.py  deps.py
local_tool/store/: manifests.py  projects.py  recording.py  runs.py
local_tool/sync/: __init__.py  cloud_portal.py  exec.py  ignore.py  (+3 more)
onboarding/: 00-intro.md  00-orient.md  01-install.md  01-prepare.md  02-install-run.md  02-meet-the-demo.md  03-base-runtime.md  03-swap-policy.md  04-base-runtime-run.md  04-witness-progression.md  05-clone-demo.md  05-link-act-ppo-output.md  06-clone-demo-run.md  06-close-loop.md  07-wire-services.md  08-wire-services-run.md  09-boot-bad.md  10-boot-bad-run.md  11-swap-good.md  12-swap-good-run.md  13-close-loop.md
services/: bridge.py  param_server.py  provenance.py
services/camera/: Cargo.toml
services/camera/src/: lib.rs  main.rs  reader.rs
supervisor/: main.py  wrapper.py
(+38 files in other folders)
