[package]
name = "camera-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "camera-service"
path = "src/main.rs"
required-features = ["v4l2"]

[[bin]]
name = "camera-reader"
path = "src/reader.rs"

[features]
# Opt-in for the V4L2 reference binary. Default build (any OS) produces lib +
# camera-reader only; macOS users and sim users never need v4l.
v4l2 = ["dep:v4l"]

[dependencies]
iceoryx2 = "0.8"
turbojpeg = "1.4"
serde_json = "1"
image = { version = "0.25", default-features = false }
v4l = { version = "0.14", features = ["v4l2"], optional = true }
